[package]
name = "blosc2-rs"
version = "0.4.0+2.15.1"
description = "Blosc2"
license = "MIT"
edition = "2021"

[lib]
name = "blosc2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["shared"]
use-system-blosc2 = ["blosc2-sys/use-system-blosc2"]
regenerate-bindings = ["blosc2-sys/regenerate-bindings"]
static = ["blosc2-sys/static"]
shared = ["blosc2-sys/shared"]

[dependencies]
blosc2-sys = { path = "blosc2-sys", version = "0.4.0+2.15.1" }
parking_lot = "^0.12"

[dev-dependencies]
ctor = "0.2.0"
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "benchmarks"
harness = false
