[package]
name = "blosc2-sys"
version = "0.3.1+2.15.2"
edition = "2021"
description = "Bindings to C Blosc2"
license = "MIT"
links = "blosc2"
exclude = [
    "c-blosc2/compat/**",
    "c-blosc2/tests/**",
    "c-blosc2/bench/**",
    "c-blosc2/internal-complibs/zlib-ng-2.0.7/contrib/**",
    "c-blosc2/internal-complibs/zlib-ng-2.0.7/examples/**",
    "c-blosc2/internal-complibs/zlib-ng-2.0.7/doc/**",
    "c-blosc2/internal-complibs/zstd-1.5.5/legacy/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2"

[features]
default = []
static  = []
shared  = []

use-system-blosc2     = ["dep:pkg-config"]
deactivate-zlib-optim = []

deactivate-zlib       = []
prefer-external-zlib  = []

deactivate-zstd       = []
prefer-external-zstd  = []

prefer-external-lz4   = []

# Regenerate the bindings to c-blosc2 header
regenerate-bindings = ["bindgen"]

[build-dependencies]
cmake = "^0.1"
bindgen = { version = "^0.69", optional = true }
pkg-config = { version = "^0.3", optional = true }
copy_dir = "0.1.3"
